Character model added, listed campaigns are now campaigns that the user is a part of

--- a/APServer/config.properties
+++ b/APServer/config.properties
@@ -1,5 +1,5 @@
-#Fri Jan 24 15:19:43 CET 2014
-database_name=sce
+#Tue Jan 28 00:14:46 CET 2014
+database_name=apdb
 database_password=1234
 network_port=1226
 database_user=root
