More huge improvements

--- a/APServer/config.properties
+++ b/APServer/config.properties
@@ -1,5 +1,5 @@
-#Wed Feb 12 10:59:56 CET 2014
+#Thu Mar 27 16:12:48 CET 2014
 database_name=apdb
 database_password=1234
 network_port=1226
-database_user=root
+database_user=dev
